@@ -4,7 +4,7 @@
 //
 // **********************************************************************
 
-class Server extends com.zeroc.Ice.Application
+class Server
 {
     static class LocatorI implements com.zeroc.Ice.ServantLocator
     {
@@ -33,18 +33,41 @@ class Server extends com.zeroc.Ice.Application
         private com.zeroc.Ice.Object _servant;
     }
 
-    @Override
-    public int run(String[] args)
+    public static void main(String[] args)
     {
-        args = communicator().getProperties().parseCommandLineOptions("JDBC", args);
+        int status = 0;
+        java.util.List<String> extraArgs = new java.util.ArrayList<String>();
 
-        if(args.length > 0)
+        //
+        // Try with resources block - communicator is automatically destroyed
+        // at the end of this try block
+        //
+        try(com.zeroc.Ice.Communicator communicator = com.zeroc.Ice.Util.initialize(args, "config.server", extraArgs))
         {
-            System.err.println(appName() + ": too many arguments");
-            return 1;
+            //
+            // Install shutdown hook to (also) destroy communicator during JVM shutdown.
+            // This ensures the communicator gets destroyed when the user interrupts the application with Ctrl-C.
+            //
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> communicator.destroy()));
+
+            if(!extraArgs.isEmpty())
+            {
+                System.err.println("too many arguments");
+                status = 1;
+            }
+            else
+            {
+                status = run(communicator, extraArgs.toArray(new String[extraArgs.size()]));
+            }
         }
 
-        com.zeroc.Ice.Properties properties = communicator().getProperties();
+        System.exit(status);
+    }
+
+    private static int run(com.zeroc.Ice.Communicator communicator, String[] args)
+    {
+        args = communicator.getProperties().parseCommandLineOptions("JDBC", args);
+        com.zeroc.Ice.Properties properties = communicator.getProperties();
 
         String username = properties.getProperty("JDBC.Username");
         String password = properties.getProperty("JDBC.Password");
@@ -54,12 +77,12 @@ class Server extends com.zeroc.Ice.Application
         {
             nConnections = 1;
         }
-        ConnectionPool pool = null;
-        com.zeroc.Ice.Logger logger = communicator().getLogger();
+
+        com.zeroc.Ice.Logger logger = communicator.getLogger();
 
         try
         {
-            Class.forName(properties.getProperty("JDBC.DriverClassName")).newInstance();
+            Class.forName(properties.getProperty("JDBC.DriverClassName")).getConstructor().newInstance();
         }
         catch(Exception e)
         {
@@ -73,7 +96,10 @@ class Server extends com.zeroc.Ice.Application
 
         try
         {
-            pool = new ConnectionPool(logger, url, username, password, nConnections);
+            final ConnectionPool pool = new ConnectionPool(logger, url, username, password, nConnections);
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> pool.destroy()));
+
+            SQLRequestContext.initialize(logger, pool);
         }
         catch(java.sql.SQLException e)
         {
@@ -88,9 +114,8 @@ class Server extends com.zeroc.Ice.Application
         //
         // Create an object adapter
         //
-        com.zeroc.Ice.ObjectAdapter adapter = communicator().createObjectAdapter("SessionFactory");
+        com.zeroc.Ice.ObjectAdapter adapter = communicator.createObjectAdapter("SessionFactory");
 
-        SQLRequestContext.initialize(logger, pool);
         adapter.addServantLocator(new LocatorI(new BookI()), "book");
 
         adapter.add(new SessionFactoryI(logger),
@@ -103,19 +128,8 @@ class Server extends com.zeroc.Ice.Application
         //
         adapter.activate();
 
-        shutdownOnInterrupt();
-        communicator().waitForShutdown();
-        defaultInterrupt();
-
-        pool.destroy();
+        communicator.waitForShutdown();
 
         return 0;
-    }
-
-    static public void main(String[] args)
-    {
-        Server app = new Server();
-        int status = app.main("demo.Database.library.Server", args, "config.server");
-        System.exit(status);
     }
 }
